--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,4 +16,6 @@ jobs:
         host: ${{ secrets.HOST }}
         username: ${{ secrets.USER }}
         key: ${{ secrets.PRIVATE_KEY }}
-        script: whoami
+        script: |
+          cd ${{ PROJECT_PATH}}
+          echo "PORT=${{ PORT }}"
