--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,4 +18,4 @@ jobs:
         key: ${{ secrets.PRIVATE_KEY }}
         script: |
           cd ${{ secrets.PROJECT_PATH}}
-          echo "PORT=${{ secrets.PORT }}"
+          echo "PORT=${{ secrets.PORT }}" >> .env
