--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,7 +10,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: Checking the runner
-      run: touch /home/ubuntu/.ssh/id_rsa && echo ${{ secrets.PRIVATE_KEY }} > /home/ubuntu/.ssh/id_rsa && cat id_rsa
+      run: |
+        install ssh keys
+        touch /home/ubuntu/.ssh/id_rsa
+        echo ${{ secrets.PRIVATE_KEY }} > /home/ubuntu/.ssh/id_rsa
+        cat id_rsa
     - name: Deploying to VPS
       uses: appleboy/ssh-action@master
       with:
