--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,10 +11,10 @@ jobs:
     steps:
     - name: Checking the runner
       run: |
-        install ssh keys
-        touch /home/ubuntu/.ssh/id_rsa
-        echo ${{ secrets.PRIVATE_KEY }} > /home/ubuntu/.ssh/id_rsa
-        cat id_rsa
+        # install ssh keys
+        # touch ~/.ssh/id_rsa
+        echo ${{ secrets.PRIVATE_KEY }} > ~/.ssh/id_rsa
+        cat ~/.ssh/id_rsa
     - name: Deploying to VPS
       uses: appleboy/ssh-action@master
       with:
