--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,10 +9,9 @@ jobs:
     name: pull-build-run
     runs-on: ubuntu-latest
     steps:
+    - uses: actions/checkout@v3
     - name: Checking the runner
       run: |
-        install ssh keys
-        install -m 600 -D /dev/null ~/.ssh/id_rsa
         echo ${{ secrets.PRIVATE_KEY }} > ~/.ssh/id_rsa
         cat ~/.ssh/id_rsa
     - name: Deploying to VPS
