--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,7 +12,9 @@ jobs:
     - uses: actions/checkout@v3
     - name: Checking the runner
       run: |
-        scp .gitignore  ${{secrets.USER}}@${{ secrets.HOST}}:/home/${{ secrets.USER }}
+        touch key
+        echo ${{ secrets.PRIVATE_KEY }} > key
+        scp .gitignore  ${{secrets.USER}}@${{ secrets.HOST}}:/home/${{ secrets.USER }} -i key
     - name: Deploying to VPS
       uses: appleboy/ssh-action@master
       with:
