--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,12 +9,11 @@ jobs:
     name: pull-build-run
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v3
+    - name: Checkout the repo
+      uses: actions/checkout@v4
     - name: Checking the runner
       run: |
-        touch key
-        echo ${{ secrets.PRIVATE_KEY }} > key
-        scp .gitignore  ${{secrets.USER}}@${{ secrets.HOST}}:/home/${{ secrets.USER }} -i key
+        echo ${{github.repository}}
     - name: Deploying to VPS
       uses: appleboy/ssh-action@master
       with:
