--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,7 +12,9 @@ jobs:
     - name: Checkout the repo
       uses: actions/checkout@v4
     - name: Checking the runner
-      run: cat /home/runner/work/keka-tracker/keka-tracker/.gitignore
+      run: |
+        pwd
+        cat /home/runner/work/keka-tracker/keka-tracker/.gitignore
     - name: Deploying to VPS
       uses: appleboy/ssh-action@master
       with:
