--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,8 +22,8 @@ jobs:
       run: |
         sudo docker build -t keka-tracker .
         sudo docker save -o keka-tracker.tar keka-tracker
-        sudo chmod 664 keka-tracker.tar
-    - name: Exporting the Docker Image
+        sudo chmod 600 keka-tracker.tar
+    - name: Exporting the Docker Image to VPS
       uses: appleboy/scp-action@master
       with: 
         host: ${{ secrets.HOST }}
@@ -31,18 +31,17 @@ jobs:
         key: ${{ secrets.PRIVATE_KEY }}
         source: "keka-tracker.tar"
         target: "${{secrets.PROJECT_PATH}}"
-    - name: Deploying to VPS
+    - name: Extracting the Image and Running a container
       uses: appleboy/ssh-action@master
       with:
         host: ${{ secrets.HOST }}
         username: ${{ secrets.USER }}
         key: ${{ secrets.PRIVATE_KEY }}
         script: |
-          cd ${{ secrets.PROJECT_PATH}}
-          ls -a
           sudo docker kill keka-tracker
           sudo docker rm keka-tracker
           sudo docker rmi keka-tracker
-          sudo docker build -t keka-tracker .
+          cd ${{ secrets.PROJECT_PATH}}
+          sudo docker load -i keka-tracker.tar
           sudo docker run -itd -p ${{ secrets.PORT }}:${{ secrets.PORT }} --name keka-tracker keka-tracker
           exit
